--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Notes</string>
     <string name="title">Title</string>
     <string name="body">Note with some text</string>
+    <string name="new_note_title">New note</string>
 </resources>
