Added Firebase realization
Added BaseActivity, BaseViewModel and BaseViewState

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title">Title</string>
     <string name="body">Note with some text</string>
     <string name="new_note_title">New note</string>
+    <string name="ok_button">Ok</string>
 </resources>
