--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="body">Note with some text</string>
     <string name="new_note_title">New note</string>
     <string name="ok_button">Ok</string>
+    <string name="logout_menu_title">Log Out</string>
+    <string name="logout_dialog_title">Log Out from account</string>
+    <string name="logout_dialog_message">Are you sure?</string>
+    <string name="logout_dialog_cancel">Cancel</string>
 </resources>
