--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="logout_dialog_title">Log Out from account</string>
     <string name="logout_dialog_message">Are you sure?</string>
     <string name="logout_dialog_cancel">Cancel</string>
+    <string name="change_color_menu_title">Change color</string>
+    <string name="delete_menu_title">Delete note</string>
+    <string name="delete_menu_message">Are you sure?</string>
+    <string name="note_delete_ok">Yes</string>
+    <string name="note_delete_cancel">No</string>
 </resources>
